* Cvsdude has hopefully fixed the commit notification feature  * Proper commit reporting via CIA bot should work now

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Test commit to see if CIA bot properly reports them.
+Test commit to see if CIA bot properly reports them. Yet another commit notification test.
