Added 'tie' to AUTHORS

--- a/game/AUTHORS
+++ b/game/AUTHORS
@@ -10,6 +10,7 @@ NOTE: this is just a proposed list of main contributors up to this point. Feel f
 
 == Programming ==
 * icelus
+* tie
 
 == Project management ==
 * mvbarracuda
