* Removed dialogue system directory  * Merged both AUTHORS files into a common one

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,19 @@
-Audio / Music:
+NOTE: this is just a proposed list of main contributors up to this point. Feel free to add yourself to it once you've got your SVN account set up.
 
-Gameplay design:
+== Audio ==
 
-Programming:
+== Graphics ==
+* Lamoot
 
-Project management:
-barra >> martin.vohland@googlemail.com
+== Mechanics ==
+* zenbitz
 
-Writing:
+== Programming ==
+* icelus
+* tie
 
-eleazzaar >> j.w. bjerk
+== Project management ==
+* mvbarracuda
+
+== Writing ==
+* eleazzaar
