Added name to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ NOTE: this is just a proposed list of main contributors up to this point. Feel f
 == Programming ==
 * icelus
 * tie
+* maximinus
 
 == Project management ==
 * mvbarracuda
