Added bretzel to the authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ NOTE: this is just a proposed list of main contributors up to this point. Feel f
 * icelus
 * tie
 * maximinus
+* bretzel
 
 == Project management ==
 * mvbarracuda
