--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Test commit to see if CIA bot properly reports them. Yet another commit notification test.
+* Test commit to see if CIA bot properly reports them
+* Yet another commit notification test
+* Test commit to verify SVN commit issues with tZee's account
